--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"> 
     <title>Tic-Tac-Toe</title>
 </head>
-
-    <body>
+ <body>
         <h1> Tic-Tac-Toe </h1>
     
         <p1 id="gameInfo"></p1>
@@ -23,6 +23,6 @@
         <div class = "box" ></div>
         </div>
         <button id="restart"> Replay</button>  
-        <script src="script.js"></script>
+        <script src="app.js"></script>
       </body>
     </html>
